fixed text wrap problem

--- a/src/components/InternshipProject/index.css
+++ b/src/components/InternshipProject/index.css
@@ -3,7 +3,6 @@
   margin: 0px;
   padding: 0px;
   -webkit-font-smoothing: antialiased;
-  white-space: nowrap;
 }
 
 :global(.InternshipProject_App) {
